--- a/install
+++ b/install
@@ -10,34 +10,34 @@ mkdir /etc/VpsPackdir 2>/dev/null
 mkdir /etc/VpsPackdir/limite 2>/dev/null
 mkdir /etc/VpsPackdir/senha 2>/dev/null
 rm -rf /bin/limite 2>/dev/null
-wget -o /dev/null -O- http://vpsunidosmx.ga/root/VPS-Pack/raw/master/limite > /bin/limite
+wget -o /dev/null -O- https://gitlab.com/Ness90x/VPS-Pack/raw/master/limite > /bin/limite
 chmod +x /bin/limite
 rm -rf /bin/criarusuario 2>/dev/null
-wget -o /dev/null -O- http://vpsunidosmx.ga/root/VPS-Pack/raw/master/criarusuario > /bin/criarusuario
+wget -o /dev/null -O- https://gitlab.com/Ness90x/VPS-Pack/raw/master/criarusuario > /bin/criarusuario
 chmod +x /bin/criarusuario
 rm -rf /bin/deletarusuario 2>/dev/null
-wget -o /dev/null -O- http://vpsunidosmx.ga/root/VPS-Pack/raw/master/deletarusuario > /bin/deletarusuario
+wget -o /dev/null -O- https://gitlab.com/Ness90x/VPS-Pack/raw/master/deletarusuario > /bin/deletarusuario
 chmod +x /bin/deletarusuario
 rm -rf /bin/redefinirusuario 2>/dev/null
-wget -o /dev/null -O- http://vpsunidosmx.ga/root/VPS-Pack/raw/master/redefinirusuario > /bin/redefinirusuario
+wget -o /dev/null -O- https://gitlab.com/Ness90x/VPS-Pack/raw/master/redefinirusuario > /bin/redefinirusuario
 chmod +x /bin/redefinirusuario
 rm -rf /bin/vpspack 2>/dev/null
-wget -o /dev/null -O- http://vpsunidosmx.ga/root/VPS-Pack/raw/master/vpspack > /bin/vpspack
+wget -o /dev/null -O- https://gitlab.com/Ness90x/VPS-Pack/raw/master/vpspack > /bin/vpspack
 chmod +x /bin/vpspack
 rm -rf /bin/speedtest.py 2>/dev/null
-wget -o /dev/null -O- http://vpsunidosmx.ga/root/VPS-Pack/raw/master/speedtest.py > /bin/speedtest.py
+wget -o /dev/null -O- https://gitlab.com/Ness90x/VPS-Pack/raw/master/speedtest.py > /bin/speedtest.py
 chmod +x /bin/speedtest.py
-wget -o /dev/null -O- http://vpsunidosmx.ga/root/VPS-Pack/raw/master/toolmaster > /bin/toolmaster
+wget -o /dev/null -O- https://gitlab.com/Ness90x/VPS-Pack/raw/master/toolmaster > /bin/toolmaster
 chmod +x /bin/toolmaster
-wget -o /dev/null -O- http://vpsunidosmx.ga/root/VPS-Pack/raw/master/tcpspeed > /bin/tcpspeed
+wget -o /dev/null -O- https://gitlab.com/Ness90x/VPS-Pack/raw/master/tcpspeed > /bin/tcpspeed
 chmod +x /bin/tcpspeed
-wget -o /dev/null -O- http://vpsunidosmx.ga/root/VPS-Pack/raw/master/dropbear > /root/dropbear
+wget -o /dev/null -O- https://gitlab.com/Ness90x/VPS-Pack/raw/master/dropbear > /root/dropbear
 chmod +x /root/dropbear
 apt-get -y install nano
 apt-get -y install unzip
 apt-get -y install htop
 apt-get -y install figlet
-alias @actualizar='wget http://vpsunidosmx.ga/root/VPS-Pack/raw/master/install && bash install'
+alias @actualizar='wget https://gitlab.com/Ness90x/VPS-Pack/raw/master/install && bash install'
 clear
 echo -e "\033[1;32mInstalacion Finalizada\n\033[1;30mEjecute:"
 echo -e "\n\033[1;32mvpspack \033[1;30mMenu de opciones"
